Add access management contract partial

--- a/src/contracts/choreography.sol.hbs
+++ b/src/contracts/choreography.sol.hbs
@@ -1,7 +1,7 @@
 pragma solidity ^0.6.1;
 
-contract Testcontract {
+contract Choreography {
 
-    {{> instanceManagement}}
+    {{> accessManagement}}
 
 }
