Add execute events

--- a/src/contracts/choreography.sol.hbs
+++ b/src/contracts/choreography.sol.hbs
@@ -4,6 +4,11 @@ contract Choreography {
 
     {{> constructor}}
 
+    {{> events}}
+
     {{> accessManagement}}
 
+    {{#each tasks}}
+      {{> task this}}
+    {{/each}}
 }
