Add instance administration component

--- a/src/contracts/choreography.sol.hbs
+++ b/src/contracts/choreography.sol.hbs
@@ -8,6 +8,8 @@ contract Choreography {
 
     {{> accessManagement}}
 
+    {{> instanceAdministration}}
+
     {{#each tasks}}
       {{> task this}}
     {{/each}}
